# HarmonyArch

./: .gitignore  Cargo.toml  README.md  output.stl
src/: lib.rs  main.rs
src/application/: cube.rs  cuboid.rs  mesh.rs  mod.rs  selection.rs  triangulation.rs
src/composition/: mod.rs
src/domain/: mod.rs  point.rs  polygon.rs  segment.rs  solid.rs  vertex.rs
src/domain/constraints/: distance.rs  horizontal.rs  mod.rs  vertical.rs
src/domain/primitives/: mod.rs  point.rs  polygon.rs  segment.rs  solid.rs  vector.rs  vertex.rs
src/domain/solver/: ORDER.md  apply_solve.rs  boundary.rs  context.rs  delta.rs  error.rs  mod.rs  types.rs
src/domain/solver/constraints/: boundary_constraint.rs  coincident.rs  collinear.rs  coplanar.rs  equiangular.rs  equilateral.rs  level.rs  mod.rs  orthogonal.rs  plumb.rs
src/domain/validation/: colinear.rs  coplanar.rs  distinct.rs  mod.rs
src/domain/validations/: colinear.rs  coplanar.rs
src/infrastructure/: file_io.rs  geometry.rs  mod.rs  renderers.rs  wgpu_renderer.rs
src/infrastructure/shaders/: architectural.wgsl
src/interface/: camera.rs  lighting.rs  mesh_creation.rs  mod.rs  segment_outlines.rs  simple_wgpu_viewer.rs  ui.rs
src/interface/shaders/: simple_3d.wgsl
