[package]
name = "harmony_arch"
version = "0.1.0"
edition = "2021"
authors = ["Josiah Moser <classicalmoser@gmail.com>"]
description = "A semantic architectural modeling engine written in Rust"
license = "MIT"
repository = "https://github.com/classicalmoser/HarmonyArch"

[dependencies]
nalgebra = "0.32"  # 3D math library - vectors, matrices, transformations
winit = "0.30.12"
eframe = "0.26"  # GUI framework
bytemuck = "1.14" # Safe transmute for GPU buffers
tokio = { version = "1.0", features = ["full"] }  # Async runtime
bevy = { version = "0.16.1", features = ["dynamic_linking"] }

[dev-dependencies]
tempfile = "3.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 1
debug = true

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
